added dates as column headers on datagrid

--- a/WeeklyScheduler/WeeklyScheduler.csproj
+++ b/WeeklyScheduler/WeeklyScheduler.csproj
@@ -76,6 +76,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BindingProxy.cs" />
     <Compile Include="src\Data_Access\EmployeeTableDB.cs" />
     <Compile Include="src\Data_Access\SchedulerDBContext.cs" />
     <Compile Include="src\Data_Access\ScheduleTableDB.cs" />
