--- a/WeeklyScheduler/WeeklyScheduler.csproj
+++ b/WeeklyScheduler/WeeklyScheduler.csproj
@@ -77,6 +77,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BindingProxy.cs" />
+    <Compile Include="Dialog\DayScheduleDialog.xaml.cs">
+      <DependentUpon>DayScheduleDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialog\NameInputDialog.xaml.cs">
       <DependentUpon>NameInputDialog.xaml</DependentUpon>
     </Compile>
@@ -90,6 +93,10 @@
     <Compile Include="src\View Models\BaseViewModel.cs" />
     <Compile Include="src\View Models\NameInputVM.cs" />
     <Compile Include="src\View Models\WeeklyScheduleVM.cs" />
+    <Page Include="Dialog\DayScheduleDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Dialog\NameInputDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
